Fixed: Layout issues, Header margin. Added: Default menu to show as Primary Menu

--- a/assets/sass/partials/_layout.scss
+++ b/assets/sass/partials/_layout.scss
@@ -4,3 +4,6 @@
 // --------------------------------------------------
 
 
+#main{
+	margin-top: 10px; 
+}
